@@ -527,6 +527,7 @@ Tomasz Sikorski (Tomsik)
 Joeri Melis
 Joshua Hudson
 Paul Smedley (Creeping)
+Andrea Palmatè (afxgroup)
 "
 [/about]
 
