@@ -600,7 +600,7 @@ utf8_string capitalize(const utf8_string& s)
 {
 	if(s.size() > 0) {
 		utf8_iterator itor(s);
-#ifdef __APPLE__
+#if defined(__APPLE__) || defined(__AMIGAOS4__)
 		// FIXME: Should we support towupper on recent OSX platforms?
 		wchar_t uchar = *itor;
 		if(uchar >= 0 && uchar < 0x100)
@@ -622,7 +622,7 @@ utf8_string uppercase(const utf8_string& s)
 		std::string res;
 
 		for(;itor != utf8_iterator::end(s); ++itor) {
-#ifdef __APPLE__
+#if defined(__APPLE__) || defined(__AMIGAOS4__)
 			// FIXME: Should we support towupper on recent OSX platforms?
 			wchar_t uchar = *itor;
 			if(uchar >= 0 && uchar < 0x100)
@@ -645,7 +645,7 @@ utf8_string lowercase(const utf8_string& s)
 		std::string res;
 
 		for(;itor != utf8_iterator::end(s); ++itor) {
-#if defined(__APPLE__) || defined(__OpenBSD__)
+#if defined(__APPLE__) || defined(__OpenBSD__) || defined(__AMIGAOS4__)
 			// FIXME: Should we support towupper on recent OSX platforms?
 			wchar_t uchar = *itor;
 			if(uchar >= 0 && uchar < 0x100)
