@@ -31,6 +31,7 @@ Version 1.1.7+SVN:
    * new or improved sounds: elf hit, yeti hit & die, magic missiles
  * engine changes
    * added healing animations
+ * AmigaOS4 support (patch #564)
 
 Version 1.1.7:
  * campaigns
